kustomize-units/firewall/kyverno-capm3/restart-kyverno-after-capm3-crds.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: refresh-kyverno-crds-capm3
  annotations:
    kustomize.toolkit.fluxcd.io/force: Enabled
    policies.kyverno.io/title: Refresh Kyverno CRDs for CAPM3
    policies.kyverno.io/category: Other
    kyverno.io/kyverno-version: 1.12.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/subject: HelmReleases
    policies.kyverno.io/description: >-
      Trigger an restart of kyverno pods on CRD changes
      See https://gitlab.com/sylva-projects/sylva-core/-/issues/1899
spec:
  validationFailureAction: Enforce
  webhookConfiguration:
    failurePolicy: Ignore
  background: true
  rules:
  - name: refresh-kyverno-CRDs-capm3
    match:
      any:
      - resources:
          kinds:
          - apiextensions.k8s.io/*/CustomResourceDefinition
          names:
          - metal3machines.infrastructure.cluster.x-k8s.io
    mutate:
      mutateExistingOnPolicyUpdate: true
      targets:
      - apiVersion: helm.toolkit.fluxcd.io/v2
        kind: HelmRelease
        name: kyverno
        namespace: sylva-system
      patchStrategicMerge:
        spec:
          values:
            admissionController:
              podAnnotations:
                capm3-crds-installed: "True"
            backgroundController:
              podAnnotations:
                capm3-crds-installed: "True"
